###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
SUBDIRS = TOHSML TestCLI TestClientSML TestConnectionSML TestSMLEvents TestSoarPerformance
# Need to add: QuickLink SoarTextIO
java:
	cd SoarJavaDebugger && $(MAKE) $(MAKEOPTS) java
	cd TestJavaSML && $(MAKE) $(MAKEOPTS) java
	cd VisualSoar && $(MAKE) $(MAKEOPTS) java
