###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
SUBDIRS = TOHSML TestCLI TestClientSML TestConnectionSML TestSMLEvents TestSoarPerformance QuickLink

java:
	cd LoggerJava && $(MAKE) $(MAKEOPTS) java
	cd SoarJavaDebugger && $(MAKE) $(MAKEOPTS) java
	cd TestJavaSML && $(MAKE) $(MAKEOPTS) java
	cd VisualSoar && $(MAKE) $(MAKEOPTS) java
