###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
noinst_LTLIBRARIES = libgSKI.la

libgSKI_la_SOURCES = \
AgentRunManager.cpp\
Log.cpp\
TestEvents.cpp\
gSKI.cpp\
gSKI_ActionElement.cpp\
gSKI_Agent.cpp\
gSKI_AgentManager.cpp\
gSKI_AgentPerformanceMonitor.cpp\
gSKI_Condition.cpp\
gSKI_ConditionSet.cpp\
gSKI_DoNotTouch.cpp\
gSKI_EnumRemapping.cpp\
gSKI_InputLink.cpp\
gSKI_InputWMObject.cpp\
gSKI_InputWme.cpp\
gSKI_InputWorkingMemory.cpp\
gSKI_InstanceInfo.cpp\
gSKI_Iterator.cpp\
gSKI_Kernel.cpp\
gSKI_KernelFactory.cpp\
gSKI_MapIterator.cpp\
gSKI_Match.cpp\
gSKI_MatchSet.cpp\
gSKI_MultiAttribute.cpp\
gSKI_ObjectToPtrIterator.cpp\
gSKI_OutputLink.cpp\
gSKI_OutputWMObject.cpp\
gSKI_OutputWme.cpp\
gSKI_OutputWorkingMemory.cpp\
gSKI_Production.cpp\
gSKI_ProductionManager.cpp\
gSKI_ReleaseImpl.cpp\
gSKI_RhsAction.cpp\
gSKI_RhsFunctionAction.cpp\
gSKI_Stub.cpp\
gSKI_Symbol.cpp\
gSKI_SymbolFactory.cpp\
gSKI_Test.cpp\
gSKI_TestSet.cpp\
gSKI_WMObject.cpp\
gSKI_WMStaticView.cpp\
gSKI_Wme.cpp\
gSKI_WorkingMemory.cpp\
gSKI_WorkingMemoryView.cpp

INCLUDES = -I../include -I ../../SoarKernel/include

CXXFLAGS = $(SOAR_CXXFLAGS)

