###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
noinst_LTLIBRARIES = libgSKI.la

libgSKI_la_SOURCES = \
AgentRunManager.cpp\
Log.cpp\
TestEvents.cpp\
gSKI.cpp\
gSKI_ActionElement.cpp\
gSKI_Agent.cpp\
gSKI_AgentManager.cpp\
gSKI_AgentPerformanceMonitor.cpp\
gSKI_Condition.cpp\
gSKI_ConditionSet.cpp\
gSKI_DoNotTouch.cpp\
gSKI_EnumRemapping.cpp\
gSKI_InputLink.cpp\
gSKI_InputWMObject.cpp\
gSKI_InputWme.cpp\
gSKI_InputWorkingMemory.cpp\
gSKI_InstanceInfo.cpp\
gSKI_Iterator.cpp\
gSKI_Kernel.cpp\
gSKI_KernelFactory.cpp\
gSKI_MapIterator.cpp\
gSKI_Match.cpp\
gSKI_MatchSet.cpp\
gSKI_MultiAttribute.cpp\
gSKI_ObjectToPtrIterator.cpp\
gSKI_OutputLink.cpp\
gSKI_OutputWMObject.cpp\
gSKI_OutputWme.cpp\
gSKI_OutputWorkingMemory.cpp\
gSKI_Production.cpp\
gSKI_ProductionManager.cpp\
gSKI_ReleaseImpl.cpp\
gSKI_RhsAction.cpp\
gSKI_RhsFunctionAction.cpp\
gSKI_Stub.cpp\
gSKI_Symbol.cpp\
gSKI_SymbolFactory.cpp\
gSKI_Test.cpp\
gSKI_TestSet.cpp\
gSKI_WMObject.cpp\
gSKI_WMStaticView.cpp\
gSKI_Wme.cpp\
gSKI_WorkingMemory.cpp\
gSKI_WorkingMemoryView.cpp\
AgentRunManager.h\
CmdRhsFunction.h\
ConcatRhsFunction.h\
EventManagementTemplates.h\
ExecRhsFunction.h\
ILog.h\
InterruptRhsFunction.h\
IteratorHelpers.h\
Log.h\
gSKI_ActionElement.h\
gSKI_Agent.h\
gSKI_AgentManager.h\
gSKI_AgentPerformanceMonitor.h\
gSKI_Condition.h\
gSKI_ConditionSet.h\
gSKI_DoNotTouch.h\
gSKI_EnumRemapping.h\
gSKI_Error.h\
gSKI_InputLink.h\
gSKI_InputWMObject.h\
gSKI_InputWme.h\
gSKI_InputWorkingMemory.h\
gSKI_InstanceInfo.h\
gSKI_Iterator.h\
gSKI_Kernel.h\
gSKI_KernelFactory.h\
gSKI_MapIterator.h\
gSKI_Match.h\
gSKI_MatchSet.h\
gSKI_MultiAttribute.h\
gSKI_ObjectToPtrIterator.h\
gSKI_OutputLink.h\
gSKI_OutputWMObject.h\
gSKI_OutputWme.h\
gSKI_OutputWorkingMemory.h\
gSKI_Production.h\
gSKI_ProductionManager.h\
gSKI_ReleaseImpl.h\
gSKI_RhsAction.h\
gSKI_RhsFunctionAction.h\
gSKI_SetActiveAgent.h\
gSKI_Symbol.h\
gSKI_SymbolFactory.h\
gSKI_Test.h\
gSKI_TestSet.h\
gSKI_WMObject.h\
gSKI_WMStaticView.h\
gSKI_Wme.h\
gSKI_WorkingMemory.h\
gSKI_WorkingMemoryView.h\
portability.h\
../include/ExportLibFiles.h\
../include/IgSKI_ActionElement.h\
../include/IgSKI_Agent.h\
../include/IgSKI_AgentManager.h\
../include/IgSKI_AgentPerformanceMonitor.h\
../include/IgSKI_AgentRunControl.h\
../include/IgSKI_AgentThreadGroup.h\
../include/IgSKI_Condition.h\
../include/IgSKI_ConditionSet.h\
../include/IgSKI_DoNotTouch.h\
../include/IgSKI_EventManager.h\
../include/IgSKI_InputLink.h\
../include/IgSKI_InputProducer.h\
../include/IgSKI_InstanceInfo.h\
../include/IgSKI_Iterator.h\
../include/IgSKI_Kernel.h\
../include/IgSKI_KernelFactory.h\
../include/IgSKI_Match.h\
../include/IgSKI_MatchSet.h\
../include/IgSKI_MultiAttribute.h\
../include/IgSKI_OutputLink.h\
../include/IgSKI_OutputProcessor.h\
../include/IgSKI_Parser.h\
../include/IgSKI_PerformanceManager.h\
../include/IgSKI_Production.h\
../include/IgSKI_ProductionManager.h\
../include/IgSKI_ProductionMatch.h\
../include/IgSKI_Release.h\
../include/IgSKI_RhsAction.h\
../include/IgSKI_RhsFunction.h\
../include/IgSKI_RhsFunctionAction.h\
../include/IgSKI_State.h\
../include/IgSKI_Symbol.h\
../include/IgSKI_SymbolFactory.h\
../include/IgSKI_Test.h\
../include/IgSKI_TestSet.h\
../include/IgSKI_WMObject.h\
../include/IgSKI_WMStaticView.h\
../include/IgSKI_Wme.h\
../include/IgSKI_WmeReplacementPolicy.h\
../include/IgSKI_WorkingMemory.h\
../include/IgSKI_WorkingMemoryView.h\
../include/IterUtils.h\
../include/IterWrappers.h\
../include/MegaAssert.h\
../include/Win32LinuxDefines.h\
../include/gSKI.h\
../include/gSKI_Enumerations.h\
../include/gSKI_ErrorIds.h\
../include/gSKI_Events.h\
../include/gSKI_Structures.h\
../include/gSKI_Stub.h\
../include/pcre.h\
../include/pcreposix.h\
../lib_src/precre-4.5/config.h\
../lib_src/precre-4.5/internal.h\
../lib_src/precre-4.5/pcre.h\
../lib_src/precre-4.5/pcreposix.h

INCLUDES = -I../include -I ../../SoarKernel/include

CXXFLAGS = $(SOAR_CXXFLAGS)

