###########################################
# Author: Jonathan Voigt, voigtjr@gmail.com
# Date: 2006
###########################################
noinst_LTLIBRARIES = libgSKI.la

libgSKI_la_SOURCES = \
AgentRunManager.cpp\
AgentRunManager.h\
CmdRhsFunction.h\
ConcatRhsFunction.h\
EventManagementTemplates.h\
ExecRhsFunction.h\
InterruptRhsFunction.h\
IteratorHelpers.h\
gSKI_ActionElement.cpp\
gSKI_ActionElement.h\
gSKI_Agent.cpp\
gSKI_Agent.h\
gSKI_AgentManager.cpp\
gSKI_AgentManager.h\
gSKI_AgentPerformanceMonitor.cpp\
gSKI_AgentPerformanceMonitor.h\
gSKI_Condition.cpp\
gSKI_Condition.h\
gSKI_ConditionSet.cpp\
gSKI_ConditionSet.h\
gSKI_DoNotTouch.cpp\
gSKI_DoNotTouch.h\
gSKI_EnumRemapping.cpp\
gSKI_EnumRemapping.h\
gSKI_Error.h\
gSKI_InputLink.cpp\
gSKI_InputLink.h\
gSKI_InputWMObject.cpp\
gSKI_InputWMObject.h\
gSKI_InputWme.cpp\
gSKI_InputWme.h\
gSKI_InputWorkingMemory.cpp\
gSKI_InputWorkingMemory.h\
gSKI_InstanceInfo.cpp\
gSKI_InstanceInfo.h\
gSKI_Iterator.cpp\
gSKI_Iterator.h\
gSKI_Kernel.cpp\
gSKI_Kernel.h\
gSKI_KernelFactory.cpp\
gSKI_KernelFactory.h\
gSKI_MapIterator.cpp\
gSKI_MapIterator.h\
gSKI_Match.cpp\
gSKI_Match.h\
gSKI_MatchSet.cpp\
gSKI_MatchSet.h\
gSKI_MultiAttribute.cpp\
gSKI_MultiAttribute.h\
gSKI_ObjectToPtrIterator.cpp\
gSKI_ObjectToPtrIterator.h\
gSKI_OutputLink.cpp\
gSKI_OutputLink.h\
gSKI_OutputWMObject.cpp\
gSKI_OutputWMObject.h\
gSKI_OutputWme.cpp\
gSKI_OutputWme.h\
gSKI_OutputWorkingMemory.cpp\
gSKI_OutputWorkingMemory.h\
gSKI_Production.cpp\
gSKI_Production.h\
gSKI_ProductionManager.cpp\
gSKI_ProductionManager.h\
gSKI_ReleaseImpl.cpp\
gSKI_ReleaseImpl.h\
gSKI_RhsAction.cpp\
gSKI_RhsAction.h\
gSKI_RhsFunction.h\
gSKI_RhsFunctionAction.cpp\
gSKI_RhsFunctionAction.h\
gSKI_Stub.cpp\
gSKI_Symbol.cpp\
gSKI_Symbol.h\
gSKI_SymbolFactory.cpp\
gSKI_SymbolFactory.h\
gSKI_Test.cpp\
gSKI_Test.h\
gSKI_TestSet.cpp\
gSKI_TestSet.h\
gSKI_WMObject.cpp\
gSKI_WMObject.h\
gSKI_WMStaticView.cpp\
gSKI_WMStaticView.h\
gSKI_Wme.cpp\
gSKI_Wme.h\
gSKI_WorkingMemory.cpp\
gSKI_WorkingMemory.h\
gSKI_WorkingMemoryView.cpp\
gSKI_WorkingMemoryView.h\
../include/IgSKI_AgentRunControl.h\
../include/IgSKI_AgentThreadGroup.h\
../include/IgSKI_InputLink.h\
../include/IgSKI_InputProducer.h\
../include/IgSKI_Iterator.h\
../include/IgSKI_MultiAttribute.h\
../include/IgSKI_OutputLink.h\
../include/IgSKI_OutputProcessor.h\
../include/IgSKI_Production.h\
../include/IgSKI_Release.h\
../include/IgSKI_State.h\
../include/IgSKI_Symbol.h\
../include/IgSKI_SymbolFactory.h\
../include/IgSKI_WMObject.h\
../include/IgSKI_WMStaticView.h\
../include/IgSKI_Wme.h\
../include/IgSKI_WmeReplacementPolicy.h\
../include/IgSKI_WorkingMemory.h\
../include/IgSKI_WorkingMemoryView.h\
../include/IterUtils.h\
../include/IterWrappers.h\
../include/MegaAssert.h\
../include/Win32LinuxDefines.h\
../include/gSKI_Enumerations.h\
../include/gSKI_ErrorIds.h\
../include/gSKI_Events.h\
../include/gSKI_Structures.h\
../include/gSKI_Stub.h\
../include/pcre.h\
../include/pcreposix.h

INCLUDES = -I../include -I ../../SoarKernel/include

CXXFLAGS = $(SOAR_CXXFLAGS)
